version/0.2/_sources/api/ansys/sam/sysml2/meta_model/function/Function.rst.txt






:class:`Function`
=================


.. py:class:: ansys.sam.sysml2.meta_model.function.Function(id: str)

   Bases: :py:obj:`ansys.sam.sysml2.meta_model.behavior.Behavior`


   
   Java class 'com.ansys.medini.metamodel.sysml.Function'.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Function

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~result`
            - Get the result property.
          * - :py:attr:`~expression`
            - Get the expression property.







Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.meta_model.function import Function

Property detail
---------------

.. py:property:: result
   :type: None


   
   Get the result property.





   :Returns:

       :data:`python:None`
           Value of property result.











   ..
       !! processed by numpydoc !!

.. py:property:: expression
   :type: List[Expression]


   
   Get the expression property.





   :Returns:

       :obj:`List`\["Expression"]
           Value of property expression.











   ..
       !! processed by numpydoc !!






