version/0.4.0b2/_sources/api/ansys/sam/sysml2/meta_model/function/Function.rst.txt






:class:`Function`
=================


.. py:class:: ansys.sam.sysml2.meta_model.function.Function(element_id: str)

   Bases: :py:obj:`ansys.sam.sysml2.meta_model.behavior.Behavior`


   
   Java class 'com.ansys.metamodel.sysml2.Function'.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Function

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~expression`
            - Get the expression property.
          * - :py:attr:`~result`
            - Get the result property.
          * - :py:attr:`~is_model_level_evaluable`
            - Get the is model level evaluable property.







Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.meta_model.function import Function

Property detail
---------------

.. py:property:: expression
   :type: list[Expression]


   
   Get the expression property.





   :Returns:

       :class:`python:list`\["Expression"]
           Value of property expression.











   ..
       !! processed by numpydoc !!

.. py:property:: result
   :type: Feature


   
   Get the result property.





   :Returns:

       "Feature"
           Value of property result.











   ..
       !! processed by numpydoc !!

.. py:property:: is_model_level_evaluable
   :type: bool


   
   Get the is model level evaluable property.





   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           Value of property is model level evaluable.











   ..
       !! processed by numpydoc !!






